[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "graphlite"
version = "0.2.0"
description = "Interactive graph algorithm visualizer built on PyGame"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["pygame-ce>=2.4.0"]

keywords = [
    "graph", "algorithms", "visualization",
    "BFS", "DFS", "Dijkstra", "A-star",
    "Bellman-Ford", "Prim", "Kruskal",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.scripts]
graphlite = "graph_visualization.renderer:launch"

[tool.setuptools.packages.find]
include = ["graph_visualization*"]